# Sanguo

./: .gitignore
Client/Sanguo/bzbee/libapp/source/: AppModule.cpp  AppModule.h  CMakeLists.txt
Client/Sanguo/bzbee/libbaseutil/source/: AssertionMacros.h  BaseType.cpp  BaseType.h  BaseTypeDefine.h  BaseUtil_Config.h  CMakeLists.txt  Cache.cpp  Cache.h  CompileSpec.h  ConstValue.h  Cpp11EventSystem.cpp  Cpp11EventSystem.h  EnumUtil.h  FileUtil.cpp  FileUtil.h  GarbageCollection.cpp  GarbageCollection.h  Guid.cpp  Guid.h  LogUtil.cpp  LogUtil.h  MacroUtility.h  Md5Hash.h  MemCrc.cpp  MemCrc.h  Name.cpp  Name.h  RandomUtil.cpp  RandomUtil.h  Rect.cpp  Rect.h  RichTextUtil.cpp  RichTextUtil.h  Rtti.cpp  Rtti.h  StringUtil.cpp  StringUtil.h  SystemUtil.cpp  SystemUtil.h  TextInputUtil.cpp  (+14 more)
Client/Sanguo/bzbee/libbaseutil/source/allocator/: AllocCommon.cpp  AllocCommon.h  BlockAllocator.h
Client/Sanguo/bzbee/libbaseutil/source/debugs/: Debug.cpp  Debug.h
Client/Sanguo/bzbee/libbaseutil/source/file/: File.h  FileSystem.cpp  FileSystem.h  File_Zip.cpp  File_Zip.h  SubFileSystem.cpp  SubFileSystem.h  ZipFileSystem.cpp  ZipFileSystem.h
Client/Sanguo/bzbee/libbaseutil/source/glm/: glm.hpp
Client/Sanguo/bzbee/libbaseutil/source/i18n/: ITranslator.cpp  ITranslator.h  Localization.cpp  Localization.h
Client/Sanguo/bzbee/libbaseutil/source/id_jobsystem/: ParallelJobList.cpp  ParallelJobList.h  Thread.cpp  Thread.h
Client/Sanguo/bzbee/libbaseutil/source/lua/: LuaBind.cpp  LuaBind.h  LuaCallback.cpp  LuaCallback.h  LuaFunctions.h  LuaTableAccessor.inl  ScriptVM.cpp  ScriptVM.h
Client/Sanguo/bzbee/libbaseutil/source/math/: Bitwise.h  ColourValue.cpp  ColourValue.h  MathCommon.cpp  MathCommon.h
Client/Sanguo/bzbee/libbaseutil/source/platform/: Platform.h  sys_threading.cpp  sys_threading.h
Client/Sanguo/bzbee/libbaseutil/source/profiler/: CMakeLists.txt  profiler.cpp  profiler.h
Client/Sanguo/bzbee/libbaseutil/source/serialize/: FieldAttributes.cpp  FieldAttributes.h  SerializeField.cpp  SerializeField.h  SerializeOp.cpp  SerializeOp.h
Client/Sanguo/bzbee/libbaseutil/source/utils/: BufferStream.cpp  BufferStream.h  ChunckedArray.h  ContainerMemory.h  Delegate.h  DynamicArray.h  FunctionRef.h  HashMap.h  HashSet.h  IndirectArray.h  IntrusiveList.h  LogFile.cpp  LogFile.h  Optional.h  RefCountObject.h  S3DataStream.h  S3MemoryDataStream.cpp  S3MemoryDataStream.h  S3Referenced.h  STLUtils.h  SimpleMest.h  Sorting.h  TupleArray.h  idList.h  idSort.h  idStaticList.h  s3_ref_ptr.h
Client/Sanguo/bzbee/libengine_base/source/: CMakeLists.txt  RichTextUtil.cpp  RichTextUtil.h
Client/Sanguo/bzbee/libengine_base/source/Debug/: static_engine_base.lib
Client/Sanguo/bzbee/libframework/source/: CMakeLists.txt  CustomHeader.h  Framework.cpp  Framework.h  LuaBindFramework.cpp  LuaBindFramework.h
Client/Sanguo/bzbee/libframework/source/action/: ActionComponent.cpp  ActionComponent.h
Client/Sanguo/bzbee/libframework/source/component/: Component.cpp  Component.h  ComponentSerializer.cpp  ComponentSerializer.h  CullTree.cpp  CullTree.h  RenderableComponent.cpp  RenderableComponent.h  (+2 more)
Client/Sanguo/bzbee/libnetwork/source/: CMakeLists.txt  DispatchMsg.cpp  DispatchMsg.h  MsgDecoder.cpp  MsgDecoder.h  MsgHandler.cpp  MsgHandler.h  MsgNetWork.pb.cc  MsgNetWork.pb.h  NetworkModule.cpp  NetworkModule.h
Client/Sanguo/static/static_data/: CMakeLists.txt  static_data.vcxproj  static_data.vcxproj.filters  stdafx.h
Client/Sanguo/static/static_data/common/: AchieveDefine.h  BuffTemplate.h  CharacterAttr.h  ClientSpec.h  ComSkillBuff.cpp  ComSkillBuff.h  CommonDataTypeDef.cpp  CommonDataTypeDef.h  EffectCalculation.cpp  EffectCalculation.h  EffectEnum.h  EncryptUtil.cpp  EncryptUtil.h  GameDefine.h  Heartbeat.cpp  Heartbeat.h  MobTemplate.h  PlayerPrefs.cpp  PlayerPrefs.h  RandomData.cpp  RandomData.h  SkillBuffContainer.cpp  SkillBuffContainer.h  SkillBuffInfo.cpp  SkillBuffInfo.h  SkillEffect.h  SkillRoleValue.h  SkillTemplate.h  SkillType.h  SurvivalDefine.h  Timer.cpp  Timer.h  calculate.cpp  calculate.h
Client/Sanguo/static/static_data/config/: AchieveCfg.cpp  AchieveCfg.h  ArmorCfg.cpp  ArmorCfg.h  BehaviorTreeTypeCfg.cpp  BehaviorTreeTypeCfg.h  BuffCfg.cpp  BuffCfg.h  BuffGroupRuleCfg.cpp  BuffGroupRuleCfg.h  BuffTypeCfg.cpp  BuffTypeCfg.h  BuildRoomCfg.cpp  BuildRoomCfg.h  BuildingCfg.cpp  BuildingCfg.h  CraftCfg.cpp  CraftCfg.h  DefenceInfoTypeCfg.cpp  DefenceInfoTypeCfg.h  DefencePosTpyCfg.cpp  DefencePosTpyCfg.h  DropCfg.cpp  DropCfg.h  EquipTypeCfg.cpp  EquipTypeCfg.h  FieldAdventureCfg.cpp  FieldAdventureCfg.h  GlobalCfg.cpp  GlobalCfg.h  HelpCfg.cpp  HelpCfg.h  HouseCfg.cpp  HouseCfg.h  ItemCfg.cpp  ItemCfg.h  LocalizationCfg.cpp  LocalizationCfg.h  MapSettingCfg.cpp  MapSettingCfg.h  (+40 more)
Client/Sanguo/static/static_data/data/: AchieveData.cpp  AchieveData.h  CraftData.cpp  CraftData.h  DropData.cpp  DropData.h  HouseData.cpp  HouseData.h  ItemData.cpp  ItemData.h  MapData.cpp  MapData.h  MapDataMgr.cpp  MapDataMgr.h  MapObj.cpp  MapObj.h  NotesData.cpp  NotesData.h  NpcProtectorData.cpp  NpcProtectorData.h  PlantData.cpp  PlantData.h  SkillData.cpp  SkillData.h  StoreData.cpp  StoreData.h  SurvivalData.cpp  SurvivalData.h  TeamMemberData.cpp  TeamMemberData.h  TowerBuildData.cpp  TowerBuildData.h
Client/Sanguo/static/static_msg/: CMakeLists.txt  static_msg.vcxproj  static_msg.vcxproj.filters
Client/Sanguo/static/static_msg/msg/: MsgAI.pb.cc  MsgAI.pb.h  MsgAchieve.pb.cc  MsgAchieve.pb.h  MsgBuff.pb.cc  MsgBuff.pb.h  MsgBuild.pb.cc  MsgBuild.pb.h  MsgBuildTower.pb.cc  MsgBuildTower.pb.h  MsgCooldown.pb.cc  MsgCooldown.pb.h  MsgCraft.pb.cc  MsgCraft.pb.h  MsgDB.pb.cc  MsgDB.pb.h  MsgDBAction.pb.cc  MsgDBAction.pb.h  MsgDBLog.pb.cc  MsgDBLog.pb.h  MsgDungeon.pb.cc  MsgDungeon.pb.h  MsgGM.pb.cc  MsgGM.pb.h  MsgGameDef.pb.cc  MsgGameDef.pb.h  MsgHouse.pb.cc  MsgHouse.pb.h  MsgInteraction.pb.cc  MsgInteraction.pb.h  MsgInteractive.pb.cc  MsgInteractive.pb.h  MsgItem.pb.cc  MsgItem.pb.h  MsgLogin.pb.cc  MsgLogin.pb.h  MsgLottery.pb.cc  MsgLottery.pb.h  MsgMail.pb.cc  MsgMail.pb.h  (+62 more)
(+3978 files in other folders)
