cmake_minimum_required (VERSION 3.1.0)

include(${CMAKE_CURRENT_SOURCE_DIR}/../../../cmake/utils.cmake)

project (static_data)

include_directories(${PROJECT_SOURCE_DIR})
include_directories(${PROJECT_SOURCE_DIR}/../../libmsg/source)
include_directories(${PROJECT_SOURCE_DIR}/../../libconfig/source)
include_directories(${PROJECT_SOURCE_DIR}/../../../bzbee/libbaseutil/source)
include_directories(${PROJECT_SOURCE_DIR}/../../../bzbee/libframework/source)
include_directories(${PROJECT_SOURCE_DIR}/../../../bzbee/libmodel/source)
include_directories(${PROJECT_SOURCE_DIR}/../../../bzbee/librender/source)
include_directories(${PROJECT_SOURCE_DIR}/../../../bzbee/libstyle/source)
include_directories(${PROJECT_SOURCE_DIR}/../../../bzbee/libaudio/source)
include_directories(${PROJECT_SOURCE_DIR}/../../../external/libprotobuf/source)
include_directories(${PROJECT_SOURCE_DIR}/../../../external/libjsoncpp/source)
include_directories(${PROJECT_SOURCE_DIR}/../../../../common)

set(ALL_FILES
stdafx.cpp
stdafx.h
CustomHeader.h
LuaBindData.cpp
LuaBindData.h
config/ConfigLoaderUtil.cpp
config/ConfigLoaderUtil.h
config/JournalRewardCfg.cpp
config/JournalRewardCfg.h
config/GrassCfg.cpp
config/GrassCfg.h
config/SkillCfg.cpp
config/SkillCfg.h
config/SkillChangeByMapCfg.cpp
config/SkillChangeByMapCfg.h
config/EffectCfg.cpp
config/EffectCfg.h
config/FileMapCfg.cpp
config/FileMapCfg.h
config/MonsterCfg.cpp
config/MonsterCfg.h
config/MonthlySubTaskCfg.cpp
config/MonthlySubTaskCfg.h
config/MonthlySubRewardCfg.cpp
config/MonthlySubRewardCfg.h
config/MonthlyActiveStageCfg.cpp
config/MonthlyActiveStageCfg.h
config/MonthlyLevelRewardCfg.cpp
config/MonthlyLevelRewardCfg.h
config/MonthlyLevelExeCfg.h
config/MonthlyLevelExeCfg.cpp
config/MobSkillCfg.cpp
config/MobSkillCfg.h
config/PlayerAttrCfg.cpp
config/PlayerAttrCfg.h
config/BuildingCfg.cpp
config/BuildingCfg.h
config/GlobalCfg.cpp
config/GlobalCfg.h
config/LocalizationCfg.cpp
config/LocalizationCfg.h
config/MapCfg.cpp
config/MapCfg.h
config/MapSettingCfg.cpp
config/MapSettingCfg.h
config/PlantCfg.cpp
config/PlantCfg.h
config/ArmorCfg.cpp
config/ArmorCfg.h
config/ItemCfg.cpp
config/ItemCfg.h
config/MedicamentCfg.cpp
config/MedicamentCfg.h
config/DropCfg.cpp
config/DropCfg.h
config/DropPreviewDesCfg.h
config/DropPreviewDesCfg.cpp
config/DropMeterCfg.cpp
config/DropMeterCfg.h
config/CraftCfg.cpp
config/CraftCfg.h
config/CraftLockCfg.cpp
config/CraftLockCfg.h
config/PlayerAttrNameCfg.cpp
config/PlayerAttrNameCfg.h
config/NpcBadgeCfg.cpp
config/NpcBadgeCfg.h
config/NpcActiveCfg.cpp
config/NpcActiveCfg.h
config/NpcDakCfg.cpp
config/NpcDakCfg.h
config/NpcPetFightCfg.cpp
config/NpcPetFightCfg.h
config/AnimationCfg.cpp
config/AnimationCfg.h
config/EquipAnimationPathCfg.cpp
config/EquipAnimationPathCfg.h
config/TemplateMapCfg.cpp
config/TemplateMapCfg.h
config/BaseAttrRandomCfg.cpp
config/BaseAttrRandomCfg.h
config/BuffCfg.cpp
config/BuffCfg.h
config/BuffGroupRuleCfg.cpp
config/BuffGroupRuleCfg.h
config/ServerListCfg.cpp
config/ServerListCfg.h
config/PoloShingCfg.cpp
config/PoloShingCfg.h
config/TowerBuildingCfg.cpp
config/TowerBuildingCfg.h
config/TowerChallengeCfg.cpp
config/TowerChallengeCfg.h
config/ChallengeLobbyUiCfg.cpp
config/ChallengeLobbyUiCfg.h
config/DayNightCfg.cpp
config/DayNightCfg.h
config/MapWeatherEffectCfg.cpp
config/MapWeatherEffectCfg.h
config/SurvivalEventCfg.cpp
config/SurvivalEventCfg.h
config/SurvivalEventEndlessCfg.cpp
config/SurvivalEventEndlessCfg.h
config/ShootingStarCfg.cpp
config/ShootingStarCfg.h
config/CooldownGroupCfg.cpp
config/CooldownGroupCfg.h
config/ChargeRewardCfg.h
config/ChargeRewardCfg.cpp
config/CommonTaskCfg.h
config/CommonTaskCfg.cpp
config/BuildRoomCfg.cpp
config/BuildRoomCfg.h
config/InteractiveBuildingCfg.cpp
config/InteractiveBuildingCfg.h
config/InteractiveEffectCfg.cpp
config/InteractiveEffectCfg.h
config/AchieveCfg.cpp
config/AchieveCfg.h
config/StoreCfg.cpp
config/StoreCfg.h
config/SkillActionDirectionCfg.cpp
config/SkillActionDirectionCfg.h
config/PvpRankHelpCfg.cpp
config/PvpRankHelpCfg.h
config/PvpCfg.cpp
config/PvpCfg.h
config/PvpRoomCfg.cpp
config/PvpRoomCfg.h
config/MailCfg.cpp
config/MailCfg.h
config/ArtifactCfg.cpp
config/ArtifactCfg.h
config/AuctionMenuCfg.cpp
config/AuctionMenuCfg.h
config/PvpItemCfg.cpp
config/PvpItemCfg.h
config/RankCfg.cpp
config/RankCfg.h
config/ArmorRepairCfg.cpp
config/ArmorRepairCfg.h
config/ArmorRepairRatioCfg.cpp
config/ArmorRepairRatioCfg.h
config/AuctionCfg.cpp
config/AuctionCfg.h
config/ShoppingMallCfg.h
config/ShoppingMallCfg.cpp
config/VehicleCfg.h
config/VehicleCfg.cpp
config/AddBagSizeCfg.h
config/AddBagSizeCfg.cpp
config/AdventureTaskCfg.h
config/AdventureTaskCfg.cpp
config/AdventureLogCfg.h
config/AdventureLogCfg.cpp
config/AdventureBlockRewardCfg.cpp
config/AdventureBlockRewardCfg.h
config/AdventureUiConnectionCfg.h
config/AdventureUiConnectionCfg.cpp
config/MapEndlessGameCfg.h
config/MapEndlessGameCfg.cpp
config/PhizItemCfg.h
config/PhizItemCfg.cpp
config/MapEndlessTempleCfg.h
config/MapEndlessTempleCfg.cpp
config/MapEndlessWishCfg.h
config/MapEndlessWishCfg.cpp
config/ShakeMapCfg.cpp
config/ShakeMapCfg.h
config/EndlessArmorCfg.cpp
config/EndlessArmorCfg.h
config/EndlessArmorStrengthenCfg.cpp
config/EndlessArmorStrengthenCfg.h
config/PartyCfg.cpp
config/PartyCfg.h
config/MsgBoxNormalTipParamCfg.cpp
config/MsgBoxNormalTipParamCfg.h
config/PvpMapCfg.cpp
config/PvpMapCfg.h
config/MobSpeakCfg.cpp
config/MobSpeakCfg.h
config/NotifyGuideCfg.cpp
config/NotifyGuideCfg.h
config/FundAwardCfg.cpp
config/FundAwardCfg.h
config/FriendHelpRewardCfg.cpp
config/FriendHelpRewardCfg.h
config/NpcBuyBackCfg.cpp
config/NpcBuyBackCfg.h
config/TaskCfg.cpp
config/TaskCfg.h
config/MapLightColourCfg.cpp
config/MapLightColourCfg.h
config/MobBiomeCfg.cpp
config/MobBiomeCfg.h
config/HurtEffectCfg.cpp
config/HurtEffectCfg.h
config/PetCfg.cpp
config/PetCfg.h
config/FollowPetCfg.cpp
config/FollowPetCfg.h
config/PetStarCfg.cpp
config/PetStarCfg.h
config/PetLevExpCfg.cpp
config/PetLevExpCfg.h
config/PetSkillBookCfg.cpp
config/PetSkillBookCfg.h
config/PetSkillGroupCfg.cpp
config/PetSkillGroupCfg.h
config/TurntableCfg.cpp
config/TurntableCfg.h
config/TurntablePreviewCfg.cpp
config/TurntablePreviewCfg.h
config/WorldviewShowStartCfg.cpp
config/WorldviewShowStartCfg.h
config/DepositPotCfg.cpp
config/DepositPotCfg.h
config/FoodCfg.cpp
config/FoodCfg.h
config/FeedAnimalCfg.cpp
config/FeedAnimalCfg.h
config/NpcLevelCfg.cpp
config/NpcLevelCfg.h
config/SoulLevCfg.cpp
config/SoulLevCfg.h
config/SoulTypeCfg.cpp
config/SoulTypeCfg.h
config/DragronBallCfg.cpp
config/DragronBallCfg.h
config/PlotCfg.cpp
config/PlotCfg.h
config/UnLockFunCfg.cpp
config/UnLockFunCfg.h
config/FilterCharConfig.cpp
config/FilterCharConfig.h
config/EssenceCfg.h
config/EssenceCfg.cpp
config/ItemUseLimitCfg.h
config/ItemUseLimitCfg.cpp
config/LimitCfg.h
config/LimitCfg.cpp
config/SpinCfg.h
config/SpinCfg.cpp
config/GuideNodusCfg.cpp
config/GuideNodusCfg.h
config/ActionWaterCfg.cpp
config/ActionWaterCfg.h
config/LoadingTipsCfg.cpp
config/LoadingTipsCfg.h
config/SystemSettingCfg.cpp
config/SystemSettingCfg.h
config/MallRecommendCfg.cpp
config/MallRecommendCfg.h
config/PvpSquadCfg.cpp
config/PvpSquadCfg.h
config/SquadPvpMapsCfg.cpp
config/SquadPvpMapsCfg.h
config/DummyCfg.cpp
config/DummyCfg.h
config/TaskRewardCfg.cpp
config/TaskRewardCfg.h
config/TaskRewardViewCfg.cpp
config/TaskRewardViewCfg.h
config/NpcAutomaticPlantCfg.cpp
config/NpcAutomaticPlantCfg.h
config/FieldAdventureCfg.cpp
config/FieldAdventureCfg.h
config/NpcAutomaticMineCfg.cpp
config/NpcAutomaticMineCfg.h
config/NpcAutomaticRewardCfg.cpp
config/NpcAutomaticRewardCfg.h
config/NpcAutomaticAnimal.cpp
config/NpcAutomaticAnimal.h
config/NpcAutomaticExeCfg.cpp
config/NpcAutomaticExeCfg.h
config/NpcSkillCfg.cpp
config/NpcSkillCfg.h
config/GatePointBuildCfg.h
config/GatePointBuildCfg.cpp
config/AirshipWreckageCfg.h
config/AirshipWreckageCfg.cpp
config/RefiningMineCfg.h
config/RefiningMineCfg.cpp
config/RefiningMedicamentCfg.h
config/RefiningMedicamentCfg.cpp
config/RefiningFoodCfg.cpp
config/RefiningFoodCfg.h
config/VipLevelCfg.cpp
config/VipLevelCfg.h
config/ChargePcid2BitCfg.cpp
config/ChargePcid2BitCfg.h

data/MapDataMgr.cpp
data/MapDataMgr.h
data/MapData_Single.cpp
data/MapData_Single.h
data/MapData_Double.cpp
data/MapData_Double.h
data/MapData.cpp
data/MapData.h
data/MapObj.cpp
data/MapObj.h
data/StaticObj.cpp
data/StaticObj.h
data/role/Role.cpp
data/role/Role.h
data/role/Player.cpp
data/role/Player.h
data/role/Monster.cpp
data/role/Monster.h
data/role/Pet.cpp
data/role/Pet.h
data/role/FollowPet.cpp
data/role/FollowPet.h
data/role/Npc.cpp
data/role/Npc.h
data/role/ChainMonster.cpp
data/role/ChainMonster.h
data/ItemData.cpp
data/ItemData.h
data/ChatData.cpp
data/ChatData.h
data/CraftData.cpp
data/CraftData.h
data/ChargeRewardData.h
data/ChargeRewardData.cpp
data/DropData.cpp
data/DropData.h
data/SkillData.cpp
data/SkillData.h
data/DayNightData.cpp
data/DayNightData.h
data/NpcProtectorData.h
data/NpcProtectorData.cpp
data/AchieveData.cpp
data/AchieveData.h
data/StoreData.cpp
data/StoreData.h
data/MailData.cpp
data/MailData.h
data/DigData.cpp
data/DigData.h
data/AuctionData.cpp
data/AuctionData.h
data/VehicleData.cpp
data/VehicleData.h
data/FundAwardData.h
data/FundAwardData.cpp
data/NpcBuyBackData.h
data/NpcBuyBackData.cpp
data/MobBoxData.h
data/MobBoxData.cpp
data/PetData.cpp
data/PetData.h
data/TurntableDataCli.h
data/TurntableDataCli.cpp
data/SignInActivityData.h
data/SignInActivityData.cpp
data/FeedDataAnimal.cpp
data/FeedDataAnimal.h
data/AirShipData.cpp
data/AirShipData.h
data/TowerCaptiveData.cpp
data/TowerCaptiveData.h
data/TowerPvpData.cpp
data/TowerPvpData.h
data/TowerChallengeData.cpp
data/TowerChallengeData.h
data/ItemUseCountData.cpp
data/ItemUseCountData.h
data/AnouncementData.cpp
data/AnouncementData.h
data/SquadPvpData.cpp
data/SquadPvpData.h
data/CommonTaskData.cpp
data/CommonTaskData.h
data/AdventureTaskData.cpp
data/AdventureTaskData.h
data/MonthlySubTaskData.cpp
data/MonthlySubTaskData.h
data/NpcAutomaticPlantData.cpp
data/NpcAutomaticPlantData.h
data/HangupFarmData.cpp
data/HangupFarmData.h
data/HangupNpcData.cpp
data/HangupNpcData.h
data/AirshipWreckageData.cpp
data/AirshipWreckageData.h
data/RefiningDataMgr.cpp
data/RefiningDataMgr.h
data/RefiningFoodDataMgr.cpp
data/RefiningFoodDataMgr.h

pathfinding/Array2D.h
pathfinding/FlightPathfindingEx.cpp
pathfinding/FlightPathfindingEx.h
pathfinding/PathfindingEx.cpp
pathfinding/PathfindingEx.h

common/PlayerPrefs.cpp
common/PlayerPrefs.h
common/Timer.cpp
common/Timer.h
common/Heartbeat.cpp
common/Heartbeat.h
common/RandomData.cpp
common/RandomData.h
common/calculate.cpp
common/calculate.h
)

group_sources("${ALL_FILES}")

add_library(${PROJECT_NAME} ${ALL_FILES})

if (CMAKE_SYSTEM_NAME MATCHES "Windows")
    set_target_properties(${PROJECT_NAME} PROPERTIES COMPILE_FLAGS "/Yu")
    set_source_files_properties(stdafx.cpp PROPERTIES COMPILE_FLAGS "/Yc")
endif ()

set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER sandbox)
