cmake_minimum_required (VERSION 3.1.0)

include(${CMAKE_CURRENT_SOURCE_DIR}/../../../cmake/utils.cmake)

project (static_msg)

include_directories(${PROJECT_SOURCE_DIR}/../../../bzbee/libbaseutil/source)
include_directories(${PROJECT_SOURCE_DIR}/../../../external/libprotobuf/source)


set(ALL_FILES
msg/MsgDig.pb.cc
msg/MsgDig.pb.h
msg/MsgDebugTools.pb.cc
msg/MsgDebugTools.pb.h
msg/MsgLogin.pb.cc
msg/MsgLogin.pb.h
msg/MsgBuild.pb.cc
msg/MsgBuild.pb.h
msg/MsgType.pb.cc
msg/MsgType.pb.h
msg/MsgPlayer.pb.cc
msg/MsgPlayer.pb.h
msg/MsgPlant.pb.cc
msg/MsgPlant.pb.h
msg/MsgPing.pb.cc
msg/MsgPing.pb.h
msg/MsgMapMgrServer.pb.cc
msg/MsgMapMgrServer.pb.h
msg/MsgMapServer.pb.cc
msg/MsgMapServer.pb.h
msg/MsgItem.pb.cc
msg/MsgItem.pb.h
msg/MsgMob.pb.cc
msg/MsgMob.pb.h
msg/MsgAI.pb.cc
msg/MsgAI.pb.h
msg/MsgMove.pb.cc
msg/MsgMove.pb.h
msg/MsgGameDef.pb.cc
msg/MsgGameDef.pb.h
msg/MsgPacketDrop.pb.cc
msg/MsgPacketDrop.pb.h
msg/MsgGM.pb.cc
msg/MsgGM.pb.h
msg/MsgCraft.pb.cc
msg/MsgCraft.pb.h
msg/MsgNpc.pb.cc
msg/MsgNpc.pb.h
msg/MsgProtector.pb.h
msg/MsgProtector.pb.cc
msg/MsgSkill.pb.cc
msg/MsgSkill.pb.h
msg/MsgUINotify.pb.cc
msg/MsgUINotify.pb.h
msg/MsgTeam.pb.cc
msg/MsgTeam.pb.h
msg/MsgPVP.pb.cc
msg/MsgPVP.pb.h
msg/MsgPvPRandItem.pb.cc
msg/MsgPvPRandItem.pb.h
msg/MsgPvPRandMap.pb.cc
msg/MsgPvPRandMap.pb.h
msg/MsgDungeon.pb.cc
msg/MsgDungeon.pb.h
msg/MsgMapEndless.pb.cc
msg/MsgMapEndless.pb.h
msg/MsgBuff.pb.cc
msg/MsgBuff.pb.h
msg/MsgBuildTower.pb.h
msg/MsgBuildTower.pb.cc
msg/MsgSurvival.pb.h
msg/MsgSurvival.pb.cc
msg/MsgFood.pb.h
msg/MsgFood.pb.cc
msg/MsgCooldown.pb.cc
msg/MsgCooldown.pb.h
msg/MsgAchieve.pb.cc
msg/MsgAchieve.pb.h
msg/MsgBuildActive.pb.cc
msg/MsgBuildActive.pb.h
msg/MsgStore.pb.cc
msg/MsgStore.pb.h
msg/MsgInteractive.pb.h
msg/MsgInteractive.pb.cc
msg/MsgMail.pb.h
msg/MsgMail.pb.cc
msg/MsgAuction.pb.cc
msg/MsgAuction.pb.h
msg/MsgRanklist.pb.h
msg/MsgRanklist.pb.cc
msg/MsgStoreMall.pb.h
msg/MsgStoreMall.pb.cc
msg/MsgChat.pb.h
msg/MsgChat.pb.cc
msg/MsgVehicle.pb.h
msg/MsgVehicle.pb.cc
msg/clientMsgPb.pb.h
msg/clientMsgPb.pb.cc
msg/MsgFriend.pb.h
msg/MsgFriend.pb.cc
msg/MsgFog.pb.h
msg/MsgFog.pb.cc
msg/MsgNewbie.pb.h
msg/MsgNewbie.pb.cc
msg/MsgItemCurrency.pb.h
msg/MsgItemCurrency.pb.cc
msg/MsgParty.pb.h
msg/MsgParty.pb.cc
msg/MsgFund.pb.h
msg/MsgFund.pb.cc
msg/MsgTask.pb.h
msg/MsgTask.pb.cc
msg/MsgPet.pb.cc
msg/MsgPet.pb.h
msg/MsgTurntable.pb.h
msg/MsgTurntable.pb.cc
msg/MsgActivity.pb.cc
msg/MsgActivity.pb.h
msg/MsgDepositPot.pb.cc
msg/MsgDepositPot.pb.h
msg/MsgLoginReward.pb.cc
msg/MsgLoginReward.pb.h
msg/MsgFeeding.pb.cc
msg/MsgFeeding.pb.h
msg/MsgSoulBox.pb.cc
msg/MsgSoulBox.pb.h
msg/MsgTowerPVP.pb.cc
msg/MsgTowerPVP.pb.h
msg/MsgAirship.pb.cc
msg/MsgAirship.pb.h
msg/MsgTowerpvpCaptive.pb.cc
msg/MsgTowerpvpCaptive.pb.h
msg/MsgTowerpvpPair.pb.cc
msg/MsgTowerpvpPair.pb.h
msg/MsgTowerPVPTombstone.pb.cc
msg/MsgTowerPVPTombstone.pb.h
msg/MsgPlayerCache.pb.cc
msg/MsgPlayerCache.pb.h
msg/MsgPlayerEvent.pb.cc
msg/MsgPlayerEvent.pb.h
msg/MsgDragonBall.pb.cc
msg/MsgDragonBall.pb.h
msg/MsgNpcDak.pb.cc
msg/MsgNpcDak.pb.h
msg/MsgItemUseCount.pb.cc
msg/MsgItemUseCount.pb.h
msg/MsgNpcDakRepo.pb.cc
msg/MsgNpcDakRepo.pb.h
msg/MsgNpcPetBounty.pb.cc
msg/MsgNpcPetBounty.pb.h
msg/MsgAnouncement.pb.cc
msg/MsgAnouncement.pb.h
msg/MsgWorldSrv.pb.cc
msg/MsgWorldSrv.pb.h
msg/MsgHomeVisit.pb.cc
msg/MsgHomeVisit.pb.h
msg/MsgTowerChallenge.pb.cc
msg/MsgTowerChallenge.pb.h
msg/MsgPvpSquad.pb.cc
msg/MsgPvpSquad.pb.h
msg/MsgAdventureLog.pb.cc
msg/MsgAdventureLog.pb.h
msg/MsgMonthlySub.pb.cc
msg/MsgMonthlySub.pb.h
msg/MsgNpcAutoIncome.pb.h
msg/MsgNpcAutoIncome.pb.cc
msg/MsgRefiningMedicament.pb.h
msg/MsgRefiningMedicament.pb.cc
msg/MsgRefiningFood.pb.h
msg/MsgRefiningFood.pb.cc

msg/MsgTmpMap.pb.cc
msg/MsgTmpMap.pb.h

msg/MsgSpin.pb.cc
msg/MsgSpin.pb.h
msg/MsgRTT.pb.cc
msg/MsgRTT.pb.h
)

group_sources("${ALL_FILES}")

add_library(${PROJECT_NAME} ${ALL_FILES})

set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER sandbox)
